2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Ignore FileObject's with the
	  deleted flag set to true and add an appropriate UpdateReason.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/FileParser.cpp: Fix error in strncmp use.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/types.h, libwfut/FileIO.h, libwfut/FileParser.cpp: Added a 
	  flag called deleted to indicate that the server side file no longer
	  exists and should be ignored for update purposes and potentially
	  notify the client that local files are obsolete.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/Encoder.h, libwfut/IO.h: Added some doxygen comments.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelFileList.h: Make getFile return a const ref. Added
	  some comments for doxygen.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut.dox: Add initial doxygen spec file.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac: Fix second curl check.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* libwfut/WFUT.h: Call shutdown in the destructor if required.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac, libwfut/IO.cpp: Add a configure check to make sure
	  that curl is recent enough to support CURLMOPT_PIPELINING.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelParser.cpp: Fix includes for make distcheck.

2007-09-05  Simon Goodall  <simon@worldforge.org>

	* acinclude.m4: Include extra python detection macros.

2007-09-03  Simon Goodall  <simon@worldforge.org>

	* configure.ac, Makefile.am, python/Makefile.am, python/WFUT.i,
	  python/__init__.py: Use swig to generate python bindings for
	  libwfut.

2007-09-02  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp, libwfut/IO.h: Move the common curl options to a
	  separate function. Limit the number of files being downloaded